feat: working mamba

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,8 @@ select = [
 ignore = [
     "E501", # line-too-long (handled by formatter)
     "B008", # function-call-in-default-argument
+    "N803", # lowercase variable name
+    "N806", # lowercase variable name
 ]
 
 # Allow fix for all enabled rules when using `--fix`
